add firebase auth login & logout

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -7,7 +7,8 @@
 
 //components
 @import "components/todo";
-
+@import "components/main";
+@import "components/login";
 .page-title{
   text-align: center;
 }
